<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calendar_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/calendar_month_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_34"
        android:padding="@dimen/padding_8"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/calendar_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2020"
            android:textSize="@dimen/calendar_year_text_size"
            android:textColor="@color/text_display"/>

        <TextView
            android:id="@+id/calendar_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/calendar_month_text_size"
            android:textColor="@color/text_display"
            tools:text="6월"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_day_of_week"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_day_of_week_height"
        android:layout_marginStart="@dimen/margin_22"
        android:layout_marginEnd="@dimen/margin_22"
        android:layout_marginTop="@dimen/margin_16"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_month_layout">

        <TextView
            android:id="@+id/calendar_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_sunday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/calendar_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_monday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/calendar_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_tuesday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/calendar_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_wednesday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/calendar_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_thursday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/calendar_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_friday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/calendar_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_saturday"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/micro_text_size"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <com.marchlab.haema.ui.main.calendar.CalendarViewPager
        android:id="@+id/calendar_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_22"
        android:layout_marginEnd="@dimen/margin_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_day_of_week"/>

    <ImageView
        android:id="@+id/calendar_navigate_add_journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_main_fab_plus"
        android:layout_marginBottom="@dimen/margin_56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>