<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/password_msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/password_msg"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_basic"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password_layout" />

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_12"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/input_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_password_input_line" />

        <ImageView
            android:id="@+id/input_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_gravity="center"
            android:background="@drawable/background_password_input_line" />

        <ImageView
            android:id="@+id/input_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_gravity="center"
            android:background="@drawable/background_password_input_line" />

        <ImageView
            android:id="@+id/input_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_gravity="center"
            android:background="@drawable/background_password_input_line" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="@dimen/margin_48"
        android:layout_marginStart="@dimen/margin_28"
        android:layout_marginEnd="@dimen/margin_28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:layout_gravity="fill_vertical"
            android:text="@string/password_1"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_2"
            app:layout_constraintBottom_toTopOf="@+id/text_4"/>

        <TextView
            android:id="@+id/text_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_2"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintStart_toEndOf="@+id/text_1"
            app:layout_constraintEnd_toStartOf="@+id/text_3"
            app:layout_constraintTop_toTopOf="@+id/text_1"
            app:layout_constraintBottom_toTopOf="@+id/text_5"/>

        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_3"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toTopOf="@+id/text_2"
            app:layout_constraintStart_toEndOf="@id/text_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_6"/>

        <TextView
            android:id="@+id/text_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_4"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toBottomOf="@+id/text_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_5"
            app:layout_constraintBottom_toTopOf="@+id/text_7"/>

        <TextView
            android:id="@+id/text_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_5"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toTopOf="@+id/text_4"
            app:layout_constraintStart_toEndOf="@+id/text_4"
            app:layout_constraintEnd_toStartOf="@+id/text_6"
            app:layout_constraintBottom_toTopOf="@+id/text_8"/>

        <TextView
            android:id="@+id/text_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_6"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toTopOf="@+id/text_5"
            app:layout_constraintStart_toEndOf="@id/text_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_9"/>

        <TextView
            android:id="@+id/text_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_7"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toBottomOf="@+id/text_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_8"
            app:layout_constraintBottom_toTopOf="@+id/view"/>

        <TextView
            android:id="@+id/text_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_8"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toTopOf="@+id/text_7"
            app:layout_constraintStart_toEndOf="@+id/text_7"
            app:layout_constraintEnd_toStartOf="@+id/text_9"
            app:layout_constraintBottom_toTopOf="@+id/text_0"/>

        <TextView
            android:id="@+id/text_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:text="@string/password_9"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toTopOf="@+id/text_8"
            app:layout_constraintStart_toEndOf="@+id/text_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/delete"/>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_0"
            app:layout_constraintTop_toBottomOf="@+id/text_7"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/password_0"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/password_keyboard_text_size"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_password"
            android:gravity="center"
            android:layout_gravity="center"
            android:scaleType="center"
            app:srcCompat="@drawable/img_password_delete"
            app:layout_constraintTop_toTopOf="@+id/text_0"
            app:layout_constraintStart_toEndOf="@+id/text_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>






    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>