<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/delete_journal_dialog_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/delete_journal_dialog_inner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/delete_journal_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_20"
            android:gravity="center_horizontal"
            android:text="@string/delete_alert_message"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/normal_text_size"
            android:lineSpacingExtra="@dimen/micro_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/delete_journal_dialog_delete"/>

        <TextView
            android:id="@+id/delete_journal_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_16"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/delete_journal_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_16"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="#ce3131"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>