<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/journal_exit_inner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_gravity="center_vertical"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/alert_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:gravity="center_horizontal"
            android:text="@string/add_journal_exit_alert_message"
            android:textColor="@color/text_basic"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="@id/journal_exit_inner_layout"
            app:layout_constraintStart_toStartOf="@id/journal_exit_inner_layout"
            app:layout_constraintTop_toTopOf="@id/journal_exit_inner_layout" />

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_24"
            android:padding="@dimen/padding_12"
            android:text="@string/close"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_message_text_view" />

        <TextView
            android:id="@+id/remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24"
            android:padding="@dimen/padding_12"
            android:text="@string/remain"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:fontFamily="@font/kyobo_handwriting"
            app:layout_constraintTop_toTopOf="@+id/close"
            app:layout_constraintBottom_toBottomOf="@id/close"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>